Fix file change list overflowing with large file names
- Prevent file list getting too large with large file names: will be at most 30% of screen width.
- Also Fixes file headers getting shrunk when file list is large

--- a/src/app/views/repository/component.scss
+++ b/src/app/views/repository/component.scss
@@ -18,7 +18,9 @@
 
   // The file tree panel will occupy generally the same size, only changing width slightly
   app-file-panel {
-    flex: 1 auto;
+    max-width: 30vw;
+
+    flex: 1 2 auto;
   }
 
   // The diff file panel will occupy a lot of space.
